[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "instaloader>=4.14.1",
    "psycopg2-binary>=2.9.10",
    "pytelegrambotapi>=4.26.0",
    "python-telegram-bot[all]==20.6",
    "telebot>=0.0.5",
    "telegram>=0.0.1",
    "yt-dlp>=2025.2.19",
]
